--- a/sample/css/style01.css
+++ b/sample/css/style01.css
@@ -1,129 +1,32 @@
-
-html,body,#contents,.wrapper,#back{
-  background-color: #001219;
-  height: 100%;
-  width: 100%;
-  position: relative;
+body {
+  padding-top: 90px; /* ヘッダーの後ろに要素が隠れないようにするため */
 }
 
-.wrapper{
-  
+header {
+  width: 100%; /* 幅いっぱいを指定 */
+  height: 50px; /* 高さを50pxに指定 */
+  background: #CCC; /* 背景色にグレーを指定 */
+  padding: 20px 50px; /* ヘッダーに上下左右それぞれ余白を指定 */
+  box-sizing: border-box; /* padding分を含んで幅を100%にするため */
+  position: fixed; /* ウィンドウを基準に画面に固定 */
+  top: 0; /* 上下の固定位置を上から0pxにする */
+  left: 0; /* 左右の固定位置を左から0pxにする */
+  display: flex; /* 中の要素を横並びにする */
+  align-items: center; /* 中の要素を上下中央に並べる */
 }
 
-li{
-  list-style: none;
+header .gnav .menu {
+  display: flex; /* 中の要素を横並びにする */
 }
 
-img{
-  max-width: 100%;
+header .gnav .menu li {
+  list-style: none; /* リストの[・]を消す */
 }
 
-header{
-  position: fixed;
-  width: 100%;
-  background-color: #fff;
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  z-index: 100;
-  top: 0;
+header .gnav .menu li + li {
+  margin-left: 40px; /* メニューそれぞれに間隔をあけるため */
 }
 
-footer{
-  position: fixed;
-  width: 100%;
-  background-color: #fff;
-  bottom:0;
-  padding: 5px;
-  text-align: right;
-  font-size: 10px;
-}
-
-header h1{
-  font-size: 20px;
-}
-
-header ul{
-  display: flex;
-  margin-left: auto;
-}
-
-header ul li{
-  margin-left: 20px;
-}
-
-#contents{
-  overflow: hidden;
-}
-
-#back{
-  background-image: url(../images/spaceback.png);
-  background-size: cover;
-  background-position: center 100px;
-  top: 0;
-  top:90%;
-  transition: 2s all;
-}
-
-#back.anime{
-  top: 0%;
-}
-
-#person{
-  position: absolute;
-  top:200px;
-  right: -100px;
-  width: 100px;
-  transition: 0.6s all;
-}
-
-#person.anime{
-  right: 10px;
-}
-
-
-#car{
-  position: absolute;
-  bottom:100px;
-  max-width: 40%;
-  left: -250px;
-  width: 250px;
-  transition: 0.6s all;
-}
-
-#car.anime{
-  left: 0px;
-}
-
-#food{
-  width: 50%;
-  bottom: 10%;
-  margin-left: -25%;
-  left: 50%;
-  position: absolute;
-  opacity: 0;
-}
-
-
-#food.anime {
-  /* cssライブラリanimate.cssを利用 */
-  animation: zoomInDown;
-  animation-duration: 1s; 
-  opacity: 1;
-}
-
-
-#intro{
-  position: fixed;
-  display: flex;
-  z-index: 101;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  font-family: serif;
-  font-size: 20px;
-  align-items: center;
-  justify-content: center;
-  top: 0;
+main {
+  height: 100vw; /* スクロールの演出を見れるようにmainに高さを指定 */
 }
