--- a/sample/style02.css
+++ b/sample/style02.css
@@ -248,31 +248,16 @@ body {
         padding:  20px;             /* 余白指定 */
         height: 100px;              /* 高さ指定 */
     }
-  .box23 {
-    position: relative;
-    margin: 2em 0 2em 40px;
-    padding: 8px 15px;
-    background:#d9edff;
-    border-radius: 30px;
-}
-.box23:before{font-family: FontAwesome;
-    content: "\f111";
-    position: absolute;
-    font-size: 15px;
-    left: -40px;
-    bottom: 0;
-    color: #d9edff;
-}
-.box23:after{
-    font-family: FontAwesome;
-    content: "\f111";
-    position: absolute;
-    font-size: 23px;
-    left: -23px;
-    bottom: 0;
-    color: #d9edff;
-}
-.box23 p {
-    margin: 0; 
-    padding: 0;
-}
+    .box2 {
+      padding: 0.5em 1em;
+      margin: 2em 0;
+      font-weight: bold;
+      color: #6091d3;/*文字色*/
+      background: #FFF;
+      border: solid 3px #bdd9ff;/*線*/
+      border-radius: 10px;/*角の丸み*/
+  }
+  .box2 p {
+      margin: 0; 
+      padding: 0;
+  }
