--- a/sample/style03.css
+++ b/sample/style03.css
@@ -56,7 +56,7 @@ html,body{
 }
 
 .circle{
-    background-color: #7fcce3;
+    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1XzBr9I_rZCEz03b1c76-piKU7T722k7eaQ&usqp=CAU");
     border-radius: 90%;
     padding-top: 30%;
     width: 30%;
