--- a/sample/style03.css
+++ b/sample/style03.css
@@ -58,6 +58,7 @@ html,body{
 .circle{
     background-image:url("images/IMG_1958.png");
     background-repeat: no-repeat;
+    background-size: 50%;
     border-radius: 90%;
     padding-top: 30%;
     width: 30%;
