--- a/sample/style03.css
+++ b/sample/style03.css
@@ -56,9 +56,9 @@ html,body{
 }
 
 .circle{
-    background-image:url("images/IMG_1958.png");
+    background-image:url("images/IMG_2022.JPG");
     background-repeat: no-repeat;
-    background-size: 150%;
+    background-size: 140%;
     border-radius: 90%;
     padding-top: 30%;
     width: 30%;
