--- a/sample/style03.css
+++ b/sample/style03.css
@@ -17,32 +17,8 @@ body {
   border-radius: 50% 70% 50% 80%; /* 左上、右上、右下、左下 */
   background: #FF5252;
 }
-p{
-    text-align:center;
-  }
-  .cp_h1title {
-	position: relative;
-	padding: .3em;
-	text-align: center;
-}
-.cp_h1title:before,.cp_h1title:after { 
-	position: absolute;
-	top: 0;
-	content:'';
-	width: 8px;
-	height: 100%;
-	display: inline-block;
-	border-top: solid 2px #FF7043;
-	border-bottom: solid 2px #FF7043;
-}
-.cp_h1title:before {
-	border-left: solid 2px #FF7043;
-	left: 0;
-}
-.cp_h1title:after {
-	border-right: solid 2px #FF7043;
-	right: 0;
-}
+
+
 html,body{
     height: 100%;
 }
@@ -95,4 +71,32 @@ html,body{
     100%{
         border-radius: 63% 37% 54% 46%/55% 48% 52% 45%;
     }
+}
+.box18{
+    margin:2em 0;
+    position: relative;
+    padding: 0.25em 1em;
+    border: solid 2px #ffcb8a;
+    border-radius: 3px 0 3px 0;
+}
+.box18:before,.box18:after
+{
+    content: '';
+    position: absolute;
+    width:10px;
+    height: 10px;
+    border: solid 2px #ffcb8a;
+    border-radius: 50%;
+}
+.box18:after {
+    top:-12px;
+    left:-12px;
+}
+.box18:before {
+    bottom:-12px;
+    right:-12px;
+}
+.box18 p {
+    margin: 0; 
+    padding: 0;
 }
