--- a/sample/style03.css
+++ b/sample/style03.css
@@ -146,7 +146,7 @@ html,body{
   .section {
     max-width: 1024x;
     margin: 0 auto;
-    padding: 100px 20px 1000px;
+    padding: 100px 20px 100px;
   }
   ._a {
     max-width: 300px;
@@ -193,7 +193,7 @@ html,body{
   }
   
   .div_design010 .div_design010_inner .div_design010_contents {
-    background: #ddd;
+    background: rgba(255, 255, 255, 0);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -231,3 +231,53 @@ html,body{
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
   }
+  ul, ol {
+    color: #1e366a;
+    border-top: solid #1e366a 1px;/*上のボーダー*/
+    border-bottom: solid #1e366a 1px;/*下のボーダー*/
+    padding: 0.5em 0 0.5em 1.5em;
+  }
+  
+  ul li, ol li {
+    line-height: 1.5;
+    padding: 0.5em 0;
+  }
+  section {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  a.btn_10 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    box-sizing: border-box;
+    background: #fff;
+    position: relative;
+  }
+  a.btn_10 span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    box-sizing: border-box;
+    color: #333;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+    text-decoration: none;
+    box-shadow: 0px 5px 12px #CAD4E2, -6px -6px 12px #FFF;
+    border-radius: 10px;
+    position: absolute;
+    top: -5px;
+    left: 0;
+    transition-duration: 0.2s;
+  }
+  a.btn_10:hover span {
+    left: 0;
+    top: 0;
+    box-shadow: 0 0 4px #CAD4E2, -2px -2px 4px #FFF;
+  }
+  
